# VKDemo

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  vcpkg.json
assets/: a.blend  a.blend1  a.gltf  teapot.blend  teapot.gltf
scripts/: compile_shaders.py
shaders/: default.slang  default.spv  main.slang
src/: Application.cpp  Application.hpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandManager.cpp  CommandManager.hpp  CommandPool.cpp  CommandPool.hpp  Context.cpp  Context.hpp  DescriptorManager.cpp  DescriptorManager.hpp  Device.cpp  Device.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Instance.cpp  Instance.hpp  RenderPass.cpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Surface.cpp  Surface.hpp  SwapChain.cpp  SwapChain.hpp  SyncManager.cpp  SyncManager.hpp  SyncObjects.cpp  SyncObjects.hpp  Widget.cpp  Widget.hpp  Window.cpp  Window.hpp  helper.hpp  main.cpp
src/common/: RenderData.cpp  RenderData.hpp
src/core/: Buffer.cpp  Buffer.hpp  CommandManager.cpp  CommandManager.hpp  Context.cpp  Context.hpp  DescriptorManager.cpp  DescriptorManager.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Mesh.cpp  Mesh.hpp  RenderPass.cpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  Shader.hpp  SyncManager.cpp  SyncManager.hpp
src/gui/: Widget.hpp  Window.hpp
src/render/: RenderScene.cpp  RenderScene.hpp  Renderer.cpp  Renderer.hpp
src/render/graphics/: Buffer.cpp  Buffer.hpp  CommandManager.hpp  Context.hpp  DescriptorManager.cpp  DescriptorManager.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Image.hpp  RenderPass.cpp  RenderPass.hpp  Sampler.hpp  SwapChain.hpp  SyncManager.hpp  Texture.cpp  Texture.hpp
src/render/rhi/: GPUVertex.cpp  GPUVertex.hpp  GpuMesh.cpp  GpuMesh.hpp  GpuScene.cpp  GpuScene.hpp  GpuUniforms.cpp  GpuUniforms.hpp
src/resource/: SceneLoader.cpp  SceneLoader.hpp
src/scene/: Component.cpp  Component.hpp  Entity.cpp  Level.cpp  Level.hpp  Node.cpp  Node.hpp  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp
src/scene/base/: Behaviour.cpp  Behaviour.hpp  Component.hpp  Node.cpp  Node.hpp  Scene.cpp  Scene.hpp
src/scene/behaviours/: CameraController.cpp  CameraController.hpp
src/scene/components/: AABB.cpp  AABB.hpp  Camera.cpp  Camera.hpp  Image.cpp  Image.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  SubMesh.cpp  SubMesh.hpp  Texture.cpp  Texture.hpp  Transform.cpp  Transform.hpp
